--- a/ParaPract/inicial.html
+++ b/ParaPract/inicial.html
@@ -7,6 +7,13 @@
 </head>
 <body>
  <header>
+    <nav>
+        <ul>
+        <li><a href="inicial.html">Inicio</a></li>
+        <li><a href="infoPersonal.html">Informacion</a></li>
+         <li><a href="contactos.html">Contacto</a></li>
+        </ul>
+        </nav>
  </header>
  <section id="info">
  <img src="D:\Programac25\ParaPract\miFot.jpg" alt="Foto de perfil">
