--- a/ParaPract/infoPersonal.html
+++ b/ParaPract/infoPersonal.html
@@ -7,6 +7,13 @@
 </head>
 <body>
  <header>
+    <nav>
+        <ul>
+        <li><a href="inicial.html">Inicio</a></li>
+        <li><a href="infoPersonal.html">Acerca de mí</a></li>
+        <li><a href="contactos.html">Contacto</a></li>
+        </ul>
+        </nav>
  </header>
  <section id="infoPersonal">
  <h2>Referencia</h2>
