Nuevo cambo Contactos

--- a/ParaPract/infoPersonal.html
+++ b/ParaPract/infoPersonal.html
@@ -11,13 +11,14 @@
     <nav>
         <ul>
         <li><a href="inicial.html">Inicio</a></li>
-        <li><a href="infoPersonal.html">Acerca de mí</a></li>
+        <li><a href="infoPersonal.html">Datos personales</a></li>
         <li><a href="contactos.html">Contacto</a></li>
         </ul>
         </nav>
  </header>
  <section id="infoPersonal">
  <h2>Referencia</h2>
+ <h3>Gustavo Sanchez</h3>
  <table>
  <tr>
  <th>Experiencia laboral</th>
