--- a/ParaPract/contactos.html
+++ b/ParaPract/contactos.html
@@ -18,6 +18,7 @@
  </header>
  <section id="contactos">
  <h2>Contacto</h2>
+ <p>Telefono: <strong>123-456-7890</strong> solo Whatsapp</p>
  <p>Correo electrónico: <a href="mailto:guverito@gmail.com">guverito@gmail.com</a></p>
  </section>
 </body>
