Siguen los Cambios

--- a/ParaPract/infoPersonal.html
+++ b/ParaPract/infoPersonal.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
         <li><a href="inicial.html">Inicio</a></li>
-        <li><a href="infoPersonal.html">Datos personales</a></li>
+        <li><a href="infoPersonal.html">Informacion</a></li>
         <li><a href="contactos.html">Contacto</a></li>
         </ul>
         </nav>
